--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,4 +1,4 @@
-<div id="accSetting" class="container" style="text-align: center">
+<div class="container" style="text-align: center">
     <div class="row">
         <div class="col-xs-12">
             <h2>Account Information</h2>
@@ -9,7 +9,7 @@
                         <div class="col-xs-8 col-xs-offset-2">
                             <div class="form-group">
                                 <label for="accsetting_full_name">Name:</label>
-                                <input type="text" class="form-control" id="accsetting_full_name">
+                                <input type="text" class="form-control" id="accsetting_full_name" required="">
                             </div>
                         </div>
                     </div>
@@ -18,7 +18,7 @@
                             <div class="form-group">
                                 <label for="accsetting_email">Email:</label>
                                 <input type="email" class="form-control" id="accsetting_email"
-                                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required="">
                             </div>
                         </div>
                     </div>
@@ -27,7 +27,7 @@
                             <div class="form-group">
                                 <label for="accsetting_phone">Phone Number:</label>
                                 <input type="text" class="form-control bfh-phone" data-country="US"
-                                       id="accsetting_phone">
+                                       id="accsetting_phone"required="">
                             </div>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                         <div class="col-xs-8 col-xs-offset-2">
                             <div class="form-group">
                                 <label for="accsetting_street">Street:</label>
-                                <input type="text" class="form-control" id="accsetting_street">
+                                <input type="text" class="form-control" id="accsetting_street" required="">
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                         <div class="col-xs-8 col-xs-offset-2">
                             <div class="form-group">
                                 <label for="accsetting_city">City:</label>
-                                <input type="text" class="form-control" id="accsetting_city">
+                                <input type="text" class="form-control" id="accsetting_city" required="">
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <div class="col-xs-8 col-xs-offset-2">
                             <div class="form-group">
                                 <label for="accsetting_state">State:</label>
-                                <input type="text" class="form-control" id="accsetting_state">
+                                <input type="text" class="form-control" id="accsetting_state" required="">
                             </div>
                         </div>
                     </div>
@@ -65,12 +65,12 @@
                         <div class="col-xs-8 col-xs-offset-2">
                             <div class="form-group">
                                 <label for="accsetting_zip">ZIP Code:</label>
-                                <input type="number" class="form-control" id="accsetting_zip">
+                                <input type="number" class="form-control" id="accsetting_zip" required="">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                    <button id="submit_info" type="button" class="btn btn-primary" style="margin-bottom: 10%">Update</button>
+                    <button class="btn btn-primary" id="submit_info" type="submit" style="margin-bottom: 10%">Update</button>
                     </div>
                 </form>
             </div>
@@ -141,4 +141,4 @@
         </div>
     </div>
 </div>
-<script src="/js/_accSetting.js"></script>
+<script type= "text/javascript" src="/js/_accSetting.js"></script>
