--- a/_accSetting.html
+++ b/_accSetting.html
@@ -65,8 +65,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row form-group">
-                            <button class="btn btn-primary" id="accsetting_submit_info" type="submit"
+                        <div class="row">
+                            <button class="btn btn-primary" id="accsetting_submit_info"
                                     style="margin-bottom: 10%">Update
                             </button>
                         </div>
