accSetting prompt warning and data sent checked

--- a/_accSetting.html
+++ b/_accSetting.html
@@ -66,9 +66,12 @@
                             </div>
                         </div>
                         <div class="row form-group">
-                            <button class="btn btn-primary" id="accsetting_submit_info" type="submit"
+                            <div class="alert alert-danger fade in" id="accsetting_warning">
+                                <strong>Danger!</strong> There are some empty fields!
+                            </div>
+                            <div class="btn btn-primary" id="accsetting_submit_info" type="submit"
                                     style="margin-bottom: 10%">Update
-                            </button>
+                            </div>
                         </div>
                     </form>
                 </div>
