cancelled send tickit id and state

--- a/_cancelled.html
+++ b/_cancelled.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div id="cancelled" class="container" style="text-align: center">
+    <div class="row">
+        <div class="col-xs-12">
 
-</body>
-</html>
+            <h2>Ticket Cancellation</h2>
+
+            <div class="row">
+                <button id="submit_cancelled" type="button" class="btn btn-primary" style="margin-bottom: 10%">Cancel Ticket</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="/js/_cancelled.js"></script>
