--- a/_contact.html
+++ b/_contact.html
@@ -1,32 +1,31 @@
-
-
 <div class="container-fluid" id="contact">
-
     <div class ="row">
         <div class="col-xs-2"></div>
         <div class="col-xs-8">
 
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="exampleInputName2">Name</label>
-                    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+                    <label for="contact_name">Name</label>
+                    <input type="text" class="form-control" id="contact_name" placeholder="Enter your name">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail2">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+                    <label for="contact_email">Email</label>
+                    <input type="email" class="form-control" id="contact_email" placeholder="your_name@example.com">
                 </div>
-                <button type="submit" class="btn btn-primary">Send</button>
+                <div class="form-group">
+                    <label for="contact_comment">Comment:</label>
+                    <textarea class="form-control" rows="5" id="contact_comment"></textarea>
+                </div>
+                <div class="row form-group">
+                    <div class="alert alert-danger fade in" id="contact_warning">
+                        <strong>Danger!</strong> There are some empty fields!
+                    </div>
+                </div>
+                <div type="submit" id="contact_submit" class="btn btn-primary">Send</div>
             </form>
-
-            <div class="form-group">
-                <label for="comment">Comment:</label>
-                <textarea class="form-control" rows="5" id="comment"></textarea>
-             </div>
         </div>
         <div class="col-xs-2"></div>
-
     </div>
-
 </div>
-
+<script type="text/javascript" src="/js/_contact.js"></script>
 
