--- a/_rateUser.html
+++ b/_rateUser.html
@@ -19,10 +19,10 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1">
-                    <button id="rate-user" type="button" class="btn-block btn-lg btn-warning">
+                    <button id="rate-user" type="button" class="btn-block btn-lg btn-warning userRate_button">
                         Rate!
                     </button>
-                    <button id="rate-user-skip" type="button" class="btn-block btn-lg btn-warning">
+                    <button id="rate-user-skip" type="button" class="btn-block btn-lg btn-warning userRate_button">
                         Skip
                     </button>
                 </div>
