yourDeliveries: corrected ticket states

--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -23,7 +23,7 @@
                     <div class="container box">
                         <div class="row">
                             <div class="col-xs-12">
-                                <h3>Completed Tickets</h3>
+                                <h3>Shopped Tickets</h3>
                                 <ul id="yourDeliveries_shopped_tickets" class=text-center"></ul>
                             </div>
                         </div>
