--- a/_cancelled.html
+++ b/_cancelled.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-xs-12">
 
-            <h2>Ticket Cancellation</h2>
+            <h2>Payment has been cancelled.</h2>
 
             <div class="row">
-                <button id="submit_cancelled" type="button" class="btn btn-primary" style="margin-bottom: 10%">Cancel Ticket</button>
+                <button id="submit_cancelled" type="button" class="btn btn-primary" style="margin-bottom: 10%">Confirm</button>
             </div>
         </div>
     </div>
