--- a/_submitted.html
+++ b/_submitted.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-xs-12">
 
-            <h2>Ticket Submission</h2>
+            <h2>Payment submitted. Ticket is now posted!</h2>
 
             <div class="row">
-                <button id="submit_submitted" type="button" class="btn btn-primary" style="margin-bottom: 10%">Submit Ticket</button>
+                <button id="submit_submitted" type="button" class="btn btn-primary" style="margin-bottom: 10%">Confirm</button>
             </div>
         </div>
     </div>
