updates on panel

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 <div id="menu-drawer" class="cd-panel from-right" style="z-index: 3000">
     <div class="cd-panel-container">
         <header id="panel-Header" class="">
-            <h1 id="index_user-name">hellp</h1>
+            <img class="img-circle" id="index-image-user"src="placeholder/person4.png">
+            <!--<h1 id="index_user-name">hellp</h1>-->
             <div id="close-menu" class="cd-panel-close">Close</div>
         </header>
         <div class="cd-panel-content">
             <div id="Butt">
                 <div class='' id=''>
-
                     <span id="toggling">Shopper</span>
                     <span id="toggleButton" onclick="toggles();" class="toggle-button">
                         <button></button>
