--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 <div id="menu-drawer" class="cd-panel from-right" style="z-index: 3000">
     <div class="cd-panel-container">
         <header id="panel-Header" class="">
-            <img class="img-circle" id="index-image-user"src="placeholder/person4.png">
-            <!--<h1 id="index_user-name">hellp</h1>-->
-            <div id="close-menu" class="cd-panel-close">Close</div>
+            <div class="container-name">
+                <div class="div1" onclick="goToPage('_accSetting')"><img class="img-circle" id="index-image-user"src="placeholder/person4.png"></div>
+                <div class="div2"id="index_user-name">hell</div>
+            </div>
+            <!--<div id="close-menu" class="cd-panel-close">Close</div>-->
         </header>
         <div class="cd-panel-content">
             <div id="Butt">
