--- a/_signUp.html
+++ b/_signUp.html
@@ -1,11 +1,12 @@
 
 
-<div class="container">
+<div class="container" id="signUp-container">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
         <h2 class="form-signin-heading">Fetch Sign-Up</h2><br>
         <input type="email" class="form-control" name="email" placeholder="Your email" id="signup_user_email" required="" autofocus=""/><br>
-        <input type="text" class="form-control" name="username" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>
+        <input type="text" class="form-control" name="userna3
+        me" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>
         <input type="tel" class="form-control" name="usrtel" placeholder="Your phone number" id="signup_phone" required=""/><br>
         <input type="text" class="form-control" name="usrtel" placeholder="Your Address" id="signup_address" required=""/><br>
         <input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>
