--- a/_tickets.html
+++ b/_tickets.html
@@ -3,27 +3,38 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-xs-12">
+                <div>
                 <h2 class="text-center">Avaliable Tickets</h2>
+                </div>
             </div>
         </div>
 
-        <div class="row marketButtons text-center">
+        <div class="row marketButtons">
 
-            <div class="store col-xs-6 col-sm-3 selected" data-name="ralphs">
-                <h4>RALPHS</h4>
+            <div class="col-xs-6 col-md-3">
+                <div class="store selected" data-name="ralphs">
+                    <h4>RALPHS</h4>
+                </div>
             </div>
 
-            <div class="store col-xs-6 col-sm-3 selected" data-name="tjs">
-                <h4>TJ's</h4>
+            <div class="col-xs-6 col-md-3">
+                <div class="store  selected" data-name="tjs">
+                    <h4>TJ's</h4>
+                </div>
             </div>
 
-            <div class="store col-xs-6 col-sm-3 selected" data-name="wholeFoods">
-                <h4>WholeFoods</h4>
+            <div class="col-xs-6 col-md-3">
+                <div class="store selected" data-name="wholeFoods">
+                    <h4>WholeFoods</h4>
+                </div>
             </div>
 
-            <div class="store col-xs-6 col-sm-3 selected" data-name="vons">
-                <h4>VONS</h4>
+            <div class="col-xs-6 col-md-3">
+                <div class="store selected" data-name="vons">
+                    <h4>VONS</h4>
+                </div>
             </div>
+
         </div>
     </div>
 
