--- a/_homePage.html
+++ b/_homePage.html
@@ -1,7 +1,7 @@
 
 
 
-<section class="container-fluid text-center page " id="homePage">
+<section class="container text-center" id="homePage">
 
     <div class="row ">
         <a href="/_shopping.html">
