Fixed home page

--- a/_homePage.html
+++ b/_homePage.html
@@ -1,42 +1,34 @@
-
-
-
 <section class="container text-center" id="homePage">
 
     <div class="row ">
-        <a href="/_shopping.html">
-            <figure class="col-xs-12 col-md-6" id="Vons">
-                <button class="shop">
-                    <img src="/resources/images/food1.jpg"/>
-                    <h2 class="name"> VONS </h2></button>
-            </figure></a>
+        <figure class="col-xs-12 col-md-6" data-store="vons" id="Vons">
+            <div class="shop">
+                <img src="/resources/images/food1.jpg"/>
+                <h2 class="name"> VONS </h2></div>
+        </figure>
 
-        <a href="/_shopping.html">
-            <figure class="col-xs-12 col-md-6" id="Joe">
-                <button class="shop">
-                    <img src="/resources/images/food2.jpg"/>
-                    <h2 class="name"> TJ's</h2></button>
-            </figure></a>
+        <figure class="col-xs-12 col-md-6" data-store="tjs" id="Joe">
+            <div class="shop">
+                <img src="/resources/images/food2.jpg"/>
+                <h2 class="name"> TJ's</h2></div>
+        </figure>
     </div>
 
     <div class="row ">
-        <a href="/_shopping.html">
-            <figure class="col-xs-12 col-md-6 " id="Ralph">
-                <button class="shop">
-                    <img src="/resources/images/food3.jpg"/>
-                    <h2 class="name"> Ralph's</h2></button>
-            </figure></a>
+        <figure class="col-xs-12 col-md-6 "  data-store="ralphs" id="Ralph">
+            <div class="shop">
+                <img src="/resources/images/food3.jpg"/>
+                <h2 class="name"> Ralph's</h2></div>
+        </figure>
 
-        <a href="/_shopping.html">
-            <figure class="col-xs-12 col-md-6" id="WF">
-                <button class="shop">
-                    <img src="/resources/images/food4.jpg"/>
-                    <h2 class="name"> Whole Foods</h2></button>
-            </figure></a>
+        <figure class="col-xs-12 col-md-6" data-store="wholeFoods" id="WF">
+            <div class="shop">
+                <img src="/resources/images/food4.jpg"/>
+                <h2 class="name"> Whole Foods</h2></div>
+        </figure>
     </div>
 
 </section>
 
 
 <script type='text/javascript' src='/js/_homePage.js'></script>
-</body>
