--- a/_signUp.html
+++ b/_signUp.html
@@ -8,7 +8,10 @@
         <input type="text" class="form-control" name="userna3
         me" placeholder="Your name" id="signup_user_name" required="" autofocus=""/><br>
         <input type="tel" class="form-control" name="usrtel" placeholder="Your phone number" id="signup_phone" required=""/><br>
-        <input type="text" class="form-control" name="usrtel" placeholder="Your Address" id="signup_address" required=""/><br>
+        <input type="text" class="form-control" name="usrtel" placeholder="Street Adress" id="signup_street" required=""/><br>
+            <input type="text" class="form-control" name="usrtel" placeholder="City" id="signup_city" required=""/><br>
+            <input type="text" class="form-control" name="usrtel" placeholder="State" id="State" required=""/><br>
+            <input type="text" class="form-control" name="usrtel" placeholder="Zip" id="signup_zip" required=""/><br>
         <input type="password" class="form-control" name="password" placeholder="Create a password" id="signup_user_pass" required=""/><br>
         <input type="password" class="form-control" name="password" placeholder="Confirm your password" id="signup_re_pass" required=""/><br>
         <button class="btn btn-lg btn-warning btn-block" id="signup_butt" type="submit">Sign-Up</button><br>
