Added some css that is subject to change

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
 
 <div id="menu-drawer" class="cd-panel from-left" style="z-index: 3000">
     <div class="cd-panel-container">
-        <header id="panel-Header" class="">
+        <div id="panel-Header" class="">
             <div class="container-name">
                 <div class="div1" onclick="goToPage('_accSetting')"><img class="img-circle" id="index-image-user"
                                                                          src="placeholder/person4.png"></div>
                 <div class="div2" id="index_user-name">hell</div>
-            </div>
-            <!--<div id="close-menu" class="cd-panel-close">Close</div>-->
-        </header>
-        <div class="cd-panel-content">
-            <div id="Butt">
-                <div class='' id=''>
+                <div>
                     <span id="toggling">Shopper</span>
                     <span id="toggleButton" onclick="toggles();" class="toggle-button">
                         <button></button>
                     </span>
                 </div>
+            </div>
+            <!--<div id="close-menu" class="cd-panel-close">Close</div>-->
+        </div>
+        <div class="cd-panel-content">
+            <div id="Butt">
+
             </div>
         </div>
     </div>
