--- a/_checkout.html
+++ b/_checkout.html
@@ -1,5 +1,5 @@
-<div id="checkout">
-    <div class="container text-center row">
+<div id="checkout" class="container">
+    <div class="text-center row">
         <div class="col-xs-2"></div>
         <div class="col-xs-8">
             <h2>Continue Checkout</h2>
