--- a/index.html
+++ b/index.html
@@ -150,6 +150,32 @@
                 loader.goToPage(page);
             }
         },
+        updateShopping: function(){
+            if (loader.isLoggedIn && loader.userId.length > 1) {
+
+                $.ajax({
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    url: "/_shopping",
+                    data: JSON.stringify({
+                        version: loader._shopping.version,
+                        list: loader._shopping.getData()
+                    }),
+                    success: function (data) {
+                        if (data.list) {
+                            loader._shopping.loadData(data.list);
+                            loader._shopping.version = data.version;
+                            //loader._shopping.version = data.version;
+                        }
+//                    else{
+//                        //ticketPrototype.ticket.list = loader._shopping.getData();
+//                        loader._shopping.data = loader._shopping.getData();
+//                    }
+                    }
+                });
+            }
+        },
         //Saves current active ticket (if any), then fetches new one and loads page data corresponding to ticket status in back end store
 //        sendData: function () { //Gets data from page and sends to server for update. Server will send back version num
 //            if (loader.currentPageObject.getData != null) {
@@ -223,6 +249,9 @@
                                     loader.switchToShopper();
                                     return;
                                 }
+                            }
+                            if(data.currentPage == "_shopping"){
+                                loader.updateShopping();
                             }
                             if (data.currentPage != loader.currentPage) {
                                 goToPage(data.currentPage)
