--- a/_takeProfilePicture.html
+++ b/_takeProfilePicture.html
@@ -24,7 +24,7 @@
 <script>
     (function() {
         loader._takeProfilePicture = {
-            loadData: function(){
+            onPageLoad: function(){
                 function beforeTake() {
                     canvas.height = vid.offsetHeight;
                     canvas.width = canvas.height;
@@ -34,6 +34,9 @@
                         document.getElementById("redoButton1"),
                         document.getElementById('uploadImage1'),
                         0, beforeTake); //0 front cam, 1 back cam if available
+            },
+            onPageLeave: function(){
+                disableCamera(vid);
             }
         };
 
