--- a/_homePage.html
+++ b/_homePage.html
@@ -1,28 +1,33 @@
 <section class="container text-center" id="homePage">
-    <div class="row ">
-        <figure class="col-xs-12 col-md-6" data-store="vons" id="Vons">
+
+    <div class="row marketRow">
+        <figure class="col-xs-6" data-store="vons" id="Vons">
             <div class="shop">
-                <img src="/resources/images/food1.jpg"/>
-                <h2 class="name"> VONS </h2></div>
+                <!--<img src="/resources/images/food1.jpg"/>-->
+                <h2 class="name"> Vons </h2></div>
         </figure>
 
-        <figure class="col-xs-12 col-md-6" data-store="tjs" id="Joe">
+        <figure class="col-xs-6"  data-store="ralphs" id="Ralph">
             <div class="shop">
-                <img src="/resources/images/food2.jpg"/>
-                <h2 class="name"> TJ's</h2></div>
-        </figure>
-    </div>
-
-    <div class="row ">
-        <figure class="col-xs-12 col-md-6 "  data-store="ralphs" id="Ralph">
-            <div class="shop">
-                <img src="/resources/images/food3.jpg"/>
+                <!--<img src="/resources/images/food3.jpg"/>-->
                 <h2 class="name"> Ralph's</h2></div>
         </figure>
 
-        <figure class="col-xs-12 col-md-6" data-store="wholeFoods" id="WF">
+    </div>
+
+    <!--<div class="row marketRow"><div class ="col-xs-12"></div></div>-->
+
+
+    <div class="row marketRow ">
+        <figure class="col-xs-6" data-store="tjs" id="Joe">
             <div class="shop">
-                <img src="/resources/images/food4.jpg"/>
+                <!--<img src="/resources/images/food2.jpg"/>-->
+                <h2 class="name"> Trader joe's </h2></div>
+        </figure>
+
+        <figure class="col-xs-6" data-store="wholeFoods" id="WF">
+            <div class="shop">
+                <!--<img src="/resources/images/food4.jpg"/>-->
                 <h2 class="name"> Whole Foods</h2></div>
         </figure>
     </div>
