changing home css a little

--- a/_shopping.html
+++ b/_shopping.html
@@ -1,12 +1,14 @@
 <div class="container text-center" id="shopping">
 
-    <div class="row">
-        <div class="col-xs-12">
-            <h2>Shopping List</h2>
-        </div>
-    </div>
 
     <div class="container box">
+
+        <div class="row" id="shoppingHeader">
+            <div class="col-xs-12">
+                <h2>Shopping List</h2>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-xs-12">
                 <form id="shopping_list_form">
