--- a/_contact.html
+++ b/_contact.html
@@ -3,7 +3,8 @@
         <div class="col-xs-2"></div>
         <div class="col-xs-8">
 
-            <form class="form-inline">
+            <img src="resources/images/sdMap.png" style="margin-bottom: 10%">
+            <form class="form">
                 <div class="form-group">
                     <label for="contact_name">Name</label>
                     <input type="text" class="form-control" id="contact_name" placeholder="Enter your name">
