--- a/_takeProfilePicture.html
+++ b/_takeProfilePicture.html
@@ -1,7 +1,7 @@
 <div class="container text-center" id="profile-pic">
     <div class="row">
-        <div class="col-md-4 col-lg-4" id="profile-button-box-outer">
-            <div id="profile-button-box">
+        <div class="col-md-4 col-lg-4 valign-wrapper" id="profile-button-box-outer">
+            <div id="profile-button-box" class="valign">
                 <h2>Profile Picture</h2>
                 <div class="btn btn-default" id="takeButton1">Take Photo</div>
                 <div class="btn btn-primary" id="redoButton1">Retake Photo</div>
@@ -45,7 +45,7 @@
 
         $('#uploadButton1').click(function(){
             disableCamera(vid);
-            uploadFromCanvas();
+            //uploadFromCanvas();
             goToPage("_signUp");
         });
 
