--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="/css/style.css">
+
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="/css/style.css">
 
     <script src="js/underscore.js"></script>
     <script src="js/loader.js"></script>
@@ -135,14 +137,17 @@
         },
         setCurrentPage: function (page, noPrevious) {
             if (loader.currentPage != page) {
-                if (loader[loader.currentPage].hasOwnProperty("onPageLeave")){
-                    loader[loader.currentPage].onPageLeave();
+                if (loader.hasOwnProperty(loader.currentPage)) {
+                    if (loader[loader.currentPage].hasOwnProperty("onPageLeave")) {
+                        loader[loader.currentPage].onPageLeave();
+                    }
                 }
+                if (loader.hasOwnProperty(page)) {
 
-                if (loader[page].hasOwnProperty("onPageLoad")){
-                    loader[page].onPageLoad();
+                    if (loader[page].hasOwnProperty("onPageLoad")) {
+                        loader[page].onPageLoad();
+                    }
                 }
-
                 loader.previousPage = loader.currentPage;
                 loader.currentPage = page;
                 $.ajax({
