fixed some pages

--- a/_accSetting.html
+++ b/_accSetting.html
@@ -7,27 +7,27 @@
                     <form role="form" data-toggle="validator">
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_full_name" class=control-label">Full Name:</label>
-                                    <input type="text" class="form-control" id="accsetting_full_name" required="">
+                                    <input type="text" class="form-control" id="accsetting_full_name">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_email">Email:</label>
                                     <input type="email" class="form-control" id="accsetting_email"
-                                           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required="">
+                                           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_phone">Phone Number:</label>
                                     <input type="text" class="form-control bfh-phone" data-country="US"
-                                           id="accsetting_phone" required="">
+                                           id="accsetting_phone">
                                 </div>
                             </div>
                         </div>
@@ -35,37 +35,37 @@
                         <h2>Address</h2>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_street">Street:</label>
-                                    <input type="text" class="form-control" id="accsetting_street" required="">
+                                    <input type="text" class="form-control" id="accsetting_street">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_city">City:</label>
-                                    <input type="text" class="form-control" id="accsetting_city" required="">
+                                    <input type="text" class="form-control" id="accsetting_city">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_state">State:</label>
-                                    <input type="text" class="form-control" id="accsetting_state" required="">
+                                    <input type="text" class="form-control" id="accsetting_state">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
+                                <div class="input-field">
                                     <label for="accsetting_zip">ZIP Code:</label>
-                                    <input type="number" class="form-control" id="accsetting_zip" required="">
+                                    <input type="number" class="form-control" id="accsetting_zip">
                                 </div>
                             </div>
                         </div>
-                        <div class="row form-group">
+                        <div class="row input-filed">
                             <div class="alert alert-danger fade in" id="accsetting_warning">
                                 <strong>Danger!</strong> There are some empty fields!
                             </div>
