--- a/_contact.html
+++ b/_contact.html
@@ -3,20 +3,20 @@
         <div class="col-xs-2"></div>
         <div class="col-xs-8">
 
-            <form class="form-inline">
-                <div class="form-group">
+            <form class="input-field">
+                <div class="input-field">
                     <label for="contact_name">Name</label>
-                    <input type="text" class="form-control" id="contact_name" placeholder="Enter your name">
+                    <input type="text" class="form-control" id="contact_name">
                 </div>
-                <div class="form-group">
+                <div class="input-field">
                     <label for="contact_email">Email</label>
-                    <input type="email" class="form-control" id="contact_email" placeholder="your_name@example.com">
+                    <input type="email" class="form-control" id="contact_email">
                 </div>
-                <div class="form-group">
+                <div class="input-field">
                     <label for="contact_comment">Comment:</label>
                     <textarea class="form-control" rows="5" id="contact_comment"></textarea>
                 </div>
-                <div class="row form-group">
+                <div class="row input-field">
                     <div class="alert alert-danger fade in" id="contact_warning">
                         <strong>Danger!</strong> There are some empty fields!
                     </div>
